--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.66.4"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^4.1.0",
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
